fix form spacing

--- a/src/components/Form/Form.module.css
+++ b/src/components/Form/Form.module.css
@@ -2,12 +2,11 @@
     display: flex;
     flex-direction: column; 
     gap: 24px; 
-    padding-top: 10px;
+    padding-top: 42px;
     background-color: var( --color-neutral-100);
 }
 
 .checkboxWrapper {
-    margin-top: 16px;
     display: flex;
     align-items: center;
     font-size: 12px;
